--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor</title>
+  <title>Frontend Mentors</title>
 </head>
 <body>
   
