--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   
 
-  <!-- Header Section -->
+  <!------ Header Section -->
    <div class="main-head">
   <header>
     <div class="container">
